--- a/Resume-Farzana-Yesmin.tex
+++ b/Resume-Farzana-Yesmin.tex
@@ -61,8 +61,8 @@
     \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
         \textsc{\LARGE Farzana Yesmin} & \\
         Road-20, Sector-13 & Mobile: +880 1990-771124 \\
-        Uttara, Dhaka & Portfolio: \href{https://farzanayesminn.github.io/}{farzanayesminn.github.io} \\
-        Bangladesh & Email: \href{mailto:yesminfarzana.cse@gmail.com}{yesminfarzana.cse@gmail.com} \\
+        Uttara, Dhaka & Email: \href{mailto:yesminfarzana.cse@gmail.com}{yesminfarzana.cse@gmail.com} \\
+        Bangladesh & Portfolio: \href{https://portfolio-farzana-yesmin.vercel.app/}{https://portfolio-farzana-yesmin.vercel.app/} \\
     \end{tabular*}
 
     % Education
@@ -135,4 +135,3 @@
     \resumeSubHeadingListEnd
 
 \end{document}
- 
