--- a/Resume-Farzana-Yesmin.tex
+++ b/Resume-Farzana-Yesmin.tex
@@ -81,7 +81,7 @@
 \resumeSubHeadingListStart
 \resumeSubheading
 {RedGreen Technology Ltd.}{Dhaka, Bangladesh}
-{Jr. Software Engineer}{https://www.google.com/}{Jul. 2023 - Jun. 2024}
+{Jr. Software Engineer}{https://www.google.com/}{Jul. 2023 - Present}
 \resumeItemListStart
 \resumeItem{Developed responsive UIs using React and Angular for seamless user experience across devices.}
 \resumeItem{Collaborated with design and backend teams to implement interactive web components.}
